Fix: #83 Show error message for update dda status & Headertext of modal should not show to next line if its overflowing instead show ...

--- a/src/container/DDAgreements/style.scss
+++ b/src/container/DDAgreements/style.scss
@@ -112,3 +112,10 @@
     border-radius: 0 !important;
     border: 1px solid #EAEAEA !important;
 }
+
+.dd-modal-header-text {
+    color: #F3F3F6;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis
+}
